--- a/src/app/video-editor/video-editor.component.html
+++ b/src/app/video-editor/video-editor.component.html
@@ -1,4 +1,5 @@
   <ion-content>
+      
     <vg-player>
 
 
@@ -11,6 +12,8 @@
               <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
           </vg-scrub-bar>
 
+          <app-screen-painter-button></app-screen-painter-button>
+          <app-record-button'></app-record-button>
           <!-- <vg-scrub-bar style="pointer-events: none;"></vg-scrub-bar> -->
     
           <vg-time-display vgProperty="current" vgFormat="mm:ss"></vg-time-display>
@@ -24,7 +27,8 @@
           <vg-fullscreen></vg-fullscreen> -->
       </vg-controls>
     
-      <video [vgMedia]="media" #media id="singleVideo" preload="auto" crossorigin>
+      
+      <video playsinline webkit-playsinline [vgMedia]="media" #media id="singleVideo" preload="auto" crossorigin >
           <source src="http://static.videogular.com/assets/videos/videogular.mp4" type="video/mp4">
           <source src="http://static.videogular.com/assets/videos/videogular.ogg" type="video/ogg">
           <source src="http://static.videogular.com/assets/videos/videogular.webm" type="video/webm">
@@ -33,4 +37,5 @@
           <track kind="subtitles" label="Español" src="http://static.videogular.com/assets/subs/pale-blue-dot-es.vtt" srclang="es">
       </video>
     </vg-player>
+    <app-screen-painter></app-screen-painter>
   </ion-content>
