Added clickthrough master detail and fixed native compilation.

--- a/src/app/coach-search/coach-search.component.html
+++ b/src/app/coach-search/coach-search.component.html
@@ -14,7 +14,11 @@
   
 
   <ion-list>
-    <ion-item *ngFor="let item of mockData | collegeSearchFilterPipe: {firstName: searchText, lastName:searchText,  primarySport: searchText};  let i=index;">
+    <ion-item *ngFor="let item of mockData | collegeSearchFilterPipe: {firstName: searchText, lastName:searchText,  primarySport: searchText};  let i=index;"
+    [class.selected]="item === selectedCoach"
+    [routerLink]="['/coach', item.id]"
+    (click)="onSelect(item)"
+    >
       <div>
         {{item.firstName}} {{item.lastName}}
       </div>
