--- a/src/app/video-editor/video-editor.component.html
+++ b/src/app/video-editor/video-editor.component.html
@@ -7,24 +7,24 @@
       <vg-buffering></vg-buffering>
       <vg-controls>
           <vg-play-pause></vg-play-pause>
-          <!-- <vg-playback-button></vg-playback-button> -->
+          <vg-playback-button></vg-playback-button> 
           <vg-scrub-bar style="width:100%;">
               <vg-scrub-bar-current-time></vg-scrub-bar-current-time>
           </vg-scrub-bar>
 
-          <app-screen-painter-button></app-screen-painter-button>
-          <app-record-button'></app-record-button>
-          <!-- <vg-scrub-bar style="pointer-events: none;"></vg-scrub-bar> -->
+          <!-- <app-screen-painter-button></app-screen-painter-button>
+          <app-record-button></app-record-button> -->
+          <!-- <vg-scrub-bar style="pointer-events: none;"></vg-scrub-bar> 
     
           <vg-time-display vgProperty="current" vgFormat="mm:ss"></vg-time-display>
-          <!--<vg-time-display vgProperty="left" vgFormat="mm:ss"></vg-time-display>
-          <vg-time-display vgProperty="total" vgFormat="mm:ss"></vg-time-display>
-    
+          <vg-time-display vgProperty="left" vgFormat="mm:ss"></vg-time-display>
+          <vg-time-display vgProperty="total" vgFormat="mm:ss"></vg-time-display>  -->
+<!--     
           <vg-track-selector></vg-track-selector>
           <vg-mute></vg-mute>
-          <vg-volume></vg-volume>
+          <vg-volume></vg-volume> -->
     
-          <vg-fullscreen></vg-fullscreen> -->
+          <!-- <vg-fullscreen></vg-fullscreen>  -->
       </vg-controls>
     
       
