--- a/src/app/screen-painter-button/screen-painter-button.component.html
+++ b/src/app/screen-painter-button/screen-painter-button.component.html
@@ -1,3 +1,3 @@
-<p style="color: aliceblue">
-  screen-painter-button works!
-</p>
+<div id="ScreenPaintButton" (click)="onPaintButtonClick()">
+  P
+</div>
