--- a/src/app/screen-painter/screen-painter.component.scss
+++ b/src/app/screen-painter/screen-painter.component.scss
@@ -1,6 +1,8 @@
 canvas {
     width:100%;
     height:100%;
-    position: absolute;
-    z-index: 9;
+    position:absolute;
+    z-index:-999;
+    top:0;
+    background-color: yellow;
 }
