Initial setup for dark theme

--- a/src/app/pages/sign-in/sign-in.page.html
+++ b/src/app/pages/sign-in/sign-in.page.html
@@ -10,11 +10,11 @@
       <ion-col>
         <ion-list inset>
           <ion-item>
-            <ion-input placeholder="Email" name="username" id="loginField"
+            <ion-input placeholder="Email" name="username" id="loginField" class="textbox"
                        type="text" required [(ngModel)]="username" #email></ion-input>
           </ion-item>
           <ion-item>
-            <ion-input placeholder="Password" name="password" id="passwordField"
+            <ion-input placeholder="Password" name="password" id="passwordField" class="textbox"
                        type="password" required [(ngModel)]="password"></ion-input>
           </ion-item>
         </ion-list>
