Added cordova packages and images

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,13 +11,13 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <ion-img src="/assets/shapes.svg"></ion-img>
+      <ion-img src="/assets/img/EALogo.png"></ion-img>
       <ion-card-header>
         <ion-card-subtitle></ion-card-subtitle>
-        <ion-card-title>Elite Access</ion-card-title>
+        <ion-card-title class="heading-1">Let's get you started...</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>Now that you've created your account, you can start looking for coaches! Check out some of the resources below for next steps.</p>
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
