--- a/src/app/pages/sign-in/sign-in.page.html
+++ b/src/app/pages/sign-in/sign-in.page.html
@@ -1,12 +1,12 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
     <ion-title>SignIn</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
-<ion-content padding>
-  <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off">
-    <ion-row>
+<ion-content padding class="img-bg">
+  <form #loginForm="ngForm" (ngSubmit)="login()" autocomplete="off" class="no-bg">
+    <ion-row class="no-bg">
       <ion-col>
         <ion-list inset>
           <ion-item>
