--- a/src/app/pages/sign-in/sign-in.page.scss
+++ b/src/app/pages/sign-in/sign-in.page.scss
@@ -1,3 +1,12 @@
+.img-bg {
+    background: url('/assets/img/Baseball-BG.png');
+    background-size: auto;
+}
+
+.no-bg, .inner-scroll, .scroll-y {
+    background: none transparent !important;
+}
+
 .textbox {
     background-color: #eee;
     color: var(--ion-background-color);
