--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,12 @@
-<ion-app>
+<ion-app class="ion-app">
   <ion-split-pane>
-    <ion-menu>
+    <ion-menu class="ion-menu">
       <ion-header>
-        <ion-toolbar>
+        <ion-toolbar class="ion-toolbar">
           <ion-title>Menu</ion-title>
         </ion-toolbar>
       </ion-header>
-      <ion-content>
+      <ion-content class="ion-content">
         <ion-list>
           <ion-menu-toggle auto-hide="false" *ngFor="let p of appPages">
             <ion-item [routerDirection]="'root'" [routerLink]="[p.url]">
